--- a/frontend/src/languages/langsJson/cn.json
+++ b/frontend/src/languages/langsJson/cn.json
@@ -234,7 +234,7 @@
     "registerTips": "没有账号？点此注册一个！",
     "rememberTips": "记住账号密码",
     "userName": "用户名",
-    "welcomeTitle": "欢迎来到ModernWMS!👋🏻"
+    "welcomeTitle": "欢迎来到 ERPYMEWMS👋🏻"
   },
   "router": {
     "sideBar": {
