--- a/frontend/src/languages/langsJson/tw.json
+++ b/frontend/src/languages/langsJson/tw.json
@@ -234,7 +234,7 @@
     "registerTips": "沒有帳號？點此註冊一個！",
     "rememberTips": "記住帳號密碼",
     "userName": "用戶名",
-    "welcomeTitle": "歡迎來到ModernWMS!👋🏻"
+    "welcomeTitle": "歡迎來到 ERPYMEWMS👋🏻"
   },
   "router": {
     "sideBar": {
